<?xml version="1.0"?>
<package format="2">
  <name>hector_mapping</name>
  <version>0.0.1</version>
  <description>The hector_mapping package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export></export>
</package>
